2009-04-21  Fabian Alenius  <fabian.alenius@gmail.com>  (tiny change)

	Fix link to autotools tutorial.
	* doc/automake.texi (Autotools Introduction): Fix broken link.
	* THANKS: Update.

2009-04-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: minor w32 fixes.
	* tests/depend5.test: Don't fail if the system or file system
	cannot handle weird characters, instead just try a few.
	* tests/parallel-tests3.test: Really wait until the serial test
	has finished, before letting the cleanup trap do its work.
	Report by Bruno Haible.

	Avoid nonportable `./FILE' instead of `FILE' in test.
	* tests/libtool3.test: Do not use `$(top_builddir)/sub/libname.la'
	in *_LDADD entry if `$(top_builddir)' is `.'.  Fixes test failure
	with parallel NetBSD make.

	Detect make `include' style also with parallel non-GNU make.
	Parallel NetBSD make outputs `--- $target ---' messages,
	parallel HP-UX make outputs `Making target"$target"'.  Just
	ignore all additional output for the include test.
	* m4/make.m4 (AM_MAKE_INCLUDE): Ignore additional output
	produced by `make' to relax `include' style detection.

	manual: add FAQ `Debugging Make Rules'.
	* doc/automake.texi (Debugging Make Rules): New FAQ section.
	(Top, FAQ): Adjust menus, and capitalization of the description
	of the `Hard-Coded Install Paths' node.
	(Multiple Outputs): Add comment to restore font-lock for vim.
	Suggestion by Karl Berry.

	Let XFile::lock warn and fail with parallel non-GNU make, too.
	* lib/Automake/XFile.pm (lock): Also match `-j' for parallel BSD
	make, and `-P' for parallel HP-UX make.

	Fix AM_PROG_VALAC version requirement detection.
	* m4/vala.m4 (AM_PROG_VALAC): Remove `Vala ' from valac
	--version string before comparing versions.
	* tests/vala2.test: Require version 0.7.0 for the test.
	Fixes failures of vala2.test and vala3.test with older valac.

	Correctly treat all assignments with bogus trailing comments.
	Before this patch, automake would silently fail to diagnose and