@@ -1,3 +1,12 @@
+2009-04-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Avoid racy depmodes with universal builds.
+	* m4/depend.m4 (_AM_DEPENDENCIES): If universal builds are used,
+	avoid racy depmodes.
+	* lib/depcomp: Ignore `-arch' argument for makedepend depmode.
+	Report by Bruno Haible, analysis by Bruno Haible, Peter O'Gorman,
+	and Eric Blake.
+
 2009-04-21  Fabian Alenius  <fabian.alenius@gmail.com>  (tiny change)
 
 	Fix link to autotools tutorial.
